made correction of one image going in the next line on small screen sizes

--- a/allPokemon/allPokemon.css
+++ b/allPokemon/allPokemon.css
@@ -1,45 +1,54 @@
-.btn {
-    padding: 0.5rem 2rem;
+.button {
+    padding: 0.5rem 0.5rem;
     border: 1px #ccc solid;
     display: inline-block;
-    margin: 2rem 0 ;
+    margin: 0.5rem 0 ;
     border-radius: 50px;
     text-decoration: none;
     color: #333;
     transition: background 300ms ease;
 }
 
-.btn:hover {
+.button:hover {
     background: #f4f4f4;
-}
-
-#buttons {
-	margin-left: 40%;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 10%;
+  margin: 5px 0;
+  height: auto;
+  width: auto;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.8);
 }
 
-.container {
-  padding: 2px 16px;
+#buttons {
+	margin-left: 40%;
 }
 
 img {
-  border-radius: 5px 5px 0 0;
   width: 100%;
-}
-
-.addMargin {
-  margin: 15px;
 }
 
 .middleAlign {
   text-align: center;
+}
+
+.row {
+  width: 100%;
+  margin: 0 5px;
+}
+
+.col {
+  width: 20%;
+}
+
+@media (max-width: 1010px) {
+  body {
+    font-size: 0.5rem;
+  }
 }
